--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -61,64 +61,68 @@
                   <li class="nav-item">
                     <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
-                  <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Discover
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-                      <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                    </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
               </div>
             </div>
         </nav>
 
-        <!-- Reference: all the text contents come from https://us.norton.com/blog/online-scams/clone-phishing -->
-        <section class="scam-introduction-section">
-            <h1>Clone Phishing</h1>
-            <p>Clone phishing is a type of cyberattack in which scammers replicate a legitimate email or message that you or your employees have previously received. 
-              They create an almost identical copy of the original communication, making subtle changes to deceive the recipient. </p>
-            <p>The goal is typically to entice the recipient into clicking a malicious link, downloading malware, or providing sensitive information such as passwords or credit card details.
-                Usually, they'll try to get you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.
-            </p>
-        </section>
-
-        <section class="scam-real-life-examples-section">
-            <div class="content">
-                <h2>Real-Life Examples</h2>
-                <p>
-                  Messages in a clone phishing attack are never exactly the same, but they often contain similar elements. Typically, they are crafted to convey a sense of urgency and include a malicious link or file attachment intended to deceive the recipient.
+        <div class="wrapper">
+          <div class="sidebar">
+              <ul>
+                <li><a href="businessEmailCompromisePhishing.html" class="active">Business Email Compromise Phishing</a></li>
+                <li><a href="clonePhishing.html">Clone Phishing</a></li>
+                <li><a href="popupPhishing.html">Pop-up Phishing</a></li>
+                <li><a href="searchEnginePhishing.html">Search Engine Phishing</a></li>
+                <li><a href="smishingPhishing.html">Smishing</a></li>
+                <li><a href="spearPhishing.html">Spear Phishing</a></li>
+                <li><a href="voicePhishing.html">Voice Phishing</a></li>
+              </ul> 
+          </div>
+          <div class="main_content">
+            <!-- Reference: all the text contents come from https://us.norton.com/blog/online-scams/clone-phishing -->
+            <section class="scam-introduction-section">
+                <h1>Clone Phishing</h1>
+                <p>Clone phishing is a type of cyberattack in which scammers replicate a legitimate email or message that you or your employees have previously received. 
+                  They create an almost identical copy of the original communication, making subtle changes to deceive the recipient. </p>
+                <p>The goal is typically to entice the recipient into clicking a malicious link, downloading malware, or providing sensitive information such as passwords or credit card details.
+                    Usually, they'll try to get you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.
                 </p>
-            </div>
-            <!-- Image Reference: https://www.valimail.com/resources/guides/guide-to-phishing/clone-phishing/-->
-            <div class="image-container">
-                <img src="./assets/clonePhishing.png" alt="Real-life example illustration" />
-            </div>
-        </section>
+            </section>
 
-        <section class="scam-prevent-section">
-            <h2>How to Prevent</h2>
-            <div class="list-container">
-                <ol class="gradient-list">
-                  <li>Hover your mouse over a link before clicking to verify its true destination. Avoid clicking on links if you weren’t expecting them.</li>
-                  <li>Ensure your phone and security software are always up to date to maintain protection.</li>
-                  <li>Be cautious if an email doesn’t address you by name, contains errors, or urgently requests personal information—these are common signs of a scam.</li>
-                </ol>
-            </div>
-        </section>
+            <section class="scam-real-life-examples-section">
+                <div class="content">
+                    <h2>Real-Life Examples</h2>
+                    <p>
+                      Messages in a clone phishing attack are never exactly the same, but they often contain similar elements. Typically, they are crafted to convey a sense of urgency and include a malicious link or file attachment intended to deceive the recipient.
+                    </p>
+                </div>
+                <!-- Image Reference: https://www.valimail.com/resources/guides/guide-to-phishing/clone-phishing/-->
+                <div class="image-container">
+                    <img src="./assets/clonePhishing.png" alt="Real-life example illustration" />
+                </div>
+            </section>
 
-        <section class="how-to-prevent-section">
-          <h2>Recovery Steps</h2>
-          <br>
-          <p>If you suspect you've fallen victim to a clone phishing attack, immediately disconnect from the internet and avoid clicking any links. Change passwords for compromised accounts, run a full security scan for malware, and review your financial accounts for unauthorized activity. Notify your IT or security team if you're using a work device, and educate others about the attack. Monitor for further phishing attempts and consider enabling account alerts. If sensitive information was compromised, consider enrolling in identity theft protection services for added security.</p>
-        </section>
+            <section class="scam-prevent-section">
+                <h2>How to Prevent</h2>
+                <div class="list-container">
+                    <ol class="gradient-list">
+                      <li>Hover your mouse over a link before clicking to verify its true destination. Avoid clicking on links if you weren’t expecting them.</li>
+                      <li>Ensure your phone and security software are always up to date to maintain protection.</li>
+                      <li>Be cautious if an email doesn’t address you by name, contains errors, or urgently requests personal information—these are common signs of a scam.</li>
+                    </ol>
+                </div>
+            </section>
+
+            <section class="how-to-prevent-section">
+              <h2>Recovery Steps</h2>
+              <br>
+              <p>If you suspect you've fallen victim to a clone phishing attack, immediately disconnect from the internet and avoid clicking any links. Change passwords for compromised accounts, run a full security scan for malware, and review your financial accounts for unauthorized activity. Notify your IT or security team if you're using a work device, and educate others about the attack. Monitor for further phishing attempts and consider enabling account alerts. If sensitive information was compromised, consider enrolling in identity theft protection services for added security.</p>
+            </section>
+          </div>
+        </div>
 
         <!-- Add a navigation button to the next scam page -->
          <!--
@@ -144,10 +148,17 @@
             <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
           </div>
         </footer>
-
+         
         <script>
-          document.getElementById('clonePhishingNextBtn').addEventListener('click', function() {
-            window.location.href = 'popupPhishing.html';
+          const sidebarLinks = document.querySelectorAll('.sidebar ul li a');
+
+          sidebarLinks.forEach(link => {
+              link.classList.remove('active');
+
+              const hrefValue = link.getAttribute('href');
+              if (hrefValue.includes('clone')) {
+                  link.classList.add('active');
+              }
           });
         </script>
     </body>
