--- a/frontend/popupPhishing.html
+++ b/frontend/popupPhishing.html
@@ -62,61 +62,65 @@
                   <li class="nav-item">
                     <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
-                  <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Discover
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-                      <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                    </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
               </div>
             </div>
         </nav>
 
-        <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
-        <section class="scam-introduction-section">
-            <h1>Pop-up Phishing</h1>
-            <p>Pop-up phishing frequently employs deceptive pop-up messages that claim there is a problem with your computer’s security or another urgent issue to trick you into clicking. This action typically directs you to download a file that contains malware or to call a fake support center.</p>
-        </section>
+        <div class="wrapper">
+          <div class="sidebar">
+              <ul>
+                <li><a href="businessEmailCompromisePhishing.html" class="active">Business Email Compromise Phishing</a></li>
+                <li><a href="clonePhishing.html">Clone Phishing</a></li>
+                <li><a href="popupPhishing.html">Pop-up Phishing</a></li>
+                <li><a href="searchEnginePhishing.html">Search Engine Phishing</a></li>
+                <li><a href="smishingPhishing.html">Smishing</a></li>
+                <li><a href="spearPhishing.html">Spear Phishing</a></li>
+                <li><a href="voicePhishing.html">Voice Phishing</a></li>
+              </ul> 
+          </div>
+          <div class="main_content">
+            <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
+            <section class="scam-introduction-section">
+                <h1>Pop-up Phishing</h1>
+                <p>Pop-up phishing frequently employs deceptive pop-up messages that claim there is a problem with your computer’s security or another urgent issue to trick you into clicking. This action typically directs you to download a file that contains malware or to call a fake support center.</p>
+            </section>
 
-        <section class="scam-real-life-examples-section">
-            <div class="content">
-                <h2>Real-Life Examples</h2>
-                <p>
-                  Users have occasionally encountered pop-ups claiming they qualify for AppleCare renewal, suggesting they can receive extended protection for their Apple devices. However, these offers are fraudulent and intended to deceive users.
-                </p>
-            </div>
-            <div class="image-container">
-                <!-- Image Reference: https://support.intego.com/hc/en-us/articles/207113578-About-the-Web-Browser-Pop-up-Alert-Scam/ -->
-                <img src="./assets/popupPhishing.jpg" alt="Real-life example illustration" />
-            </div>
-        </section>
+            <section class="scam-real-life-examples-section">
+                <div class="content">
+                    <h2>Real-Life Examples</h2>
+                    <p>
+                      Users have occasionally encountered pop-ups claiming they qualify for AppleCare renewal, suggesting they can receive extended protection for their Apple devices. However, these offers are fraudulent and intended to deceive users.
+                    </p>
+                </div>
+                <div class="image-container">
+                    <!-- Image Reference: https://support.intego.com/hc/en-us/articles/207113578-About-the-Web-Browser-Pop-up-Alert-Scam/ -->
+                    <img src="./assets/popupPhishing.jpg" alt="Real-life example illustration" />
+                </div>
+            </section>
 
-        <section class="scam-prevent-section">
-            <h2>How to Prevent</h2>
-            <div class="list-container">
-                <ol class="gradient-list">
-                  <li>Turn on pop-up blockers in your browser settings to prevent unwanted pop-ups.</li>
-                  <li>Avoid clicking any buttons or links in pop-ups that claim to address urgent issues or offer prizes; instead, close the pop-up.</li>
-                  <li>Install reliable antivirus software to help detect and block phishing pop-ups.</li>
-                  <li>Only enter personal information on websites that have “https” in the address bar for added security.</li>
-                </ol>
-            </div>
-        </section>
+            <section class="scam-prevent-section">
+                <h2>How to Prevent</h2>
+                <div class="list-container">
+                    <ol class="gradient-list">
+                      <li>Turn on pop-up blockers in your browser settings to prevent unwanted pop-ups.</li>
+                      <li>Avoid clicking any buttons or links in pop-ups that claim to address urgent issues or offer prizes; instead, close the pop-up.</li>
+                      <li>Install reliable antivirus software to help detect and block phishing pop-ups.</li>
+                      <li>Only enter personal information on websites that have “https” in the address bar for added security.</li>
+                    </ol>
+                </div>
+            </section>
 
-        <section class="how-to-prevent-section">
-          <h2>Recovery Steps</h2>
-          <br>
-          <p>If you suspect you've fallen victim to a pop-up phishing attack, first close the pop-up and avoid clicking any links or buttons. Run a full scan with reliable antivirus software to detect and remove any malware that may have been installed. Change any passwords for accounts that may have been compromised and monitor your financial accounts for unauthorized transactions. Ensure your browser’s pop-up blocker is activated and consider clearing your browser cache and cookies. Educate yourself about recognizing phishing attempts to prevent future incidents. If you provided personal information, consider enrolling in identity theft protection services for added security.</p>
-        </section>
+            <section class="how-to-prevent-section">
+              <h2>Recovery Steps</h2>
+              <br>
+              <p>If you suspect you've fallen victim to a pop-up phishing attack, first close the pop-up and avoid clicking any links or buttons. Run a full scan with reliable antivirus software to detect and remove any malware that may have been installed. Change any passwords for accounts that may have been compromised and monitor your financial accounts for unauthorized transactions. Ensure your browser’s pop-up blocker is activated and consider clearing your browser cache and cookies. Educate yourself about recognizing phishing attempts to prevent future incidents. If you provided personal information, consider enrolling in identity theft protection services for added security.</p>
+            </section>
+          </div>
+        </div>
 
         <!-- Add a navigation button to the next scam page -->
         <!--
@@ -144,8 +148,15 @@
         </footer>
 
         <script>
-          document.getElementById('popupPhishingNextBtn').addEventListener('click', function() {
-            window.location.href = 'searchEnginePhishing.html';
+          const sidebarLinks = document.querySelectorAll('.sidebar ul li a');
+
+          sidebarLinks.forEach(link => {
+              link.classList.remove('active');
+
+              const hrefValue = link.getAttribute('href');
+              if (hrefValue.includes('popup')) {
+                  link.classList.add('active');
+              }
           });
         </script>
 
