--- a/frontend/searchEnginePhishing.html
+++ b/frontend/searchEnginePhishing.html
@@ -62,63 +62,67 @@
                   <li class="nav-item">
                     <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
-                  <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Discover
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-                      <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                    </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
               </div>
             </div>
         </nav>
 
-        <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
-        <section class="scam-introduction-section">
-            <h1>Search Engine Phishing</h1>
-            <p>A search engine phishing attack involves an attacker creating fake products that appear appealing in search engine results. When users click on these listings, 
-              they are prompted to enter sensitive information before completing a purchase, which is then captured by the hacker.
-            </p>
-        </section>
-
-        <section class="scam-real-life-examples-section">
-            <div class="content">
-                <h2>Real-Life Examples</h2>
-                <p>
-                  When you search for a popular website, like Amazon.com, on a search engine and click on one of the top results, you may find yourself redirected to a convincing but fraudulent site, such as Am@zon.com. This fake version is designed to closely mimic the original site, tricking users into entering sensitive information or making unauthorized purchases.
+        <div class="wrapper">
+          <div class="sidebar">
+              <ul>
+                <li><a href="businessEmailCompromisePhishing.html" class="active">Business Email Compromise Phishing</a></li>
+                <li><a href="clonePhishing.html">Clone Phishing</a></li>
+                <li><a href="popupPhishing.html">Pop-up Phishing</a></li>
+                <li><a href="searchEnginePhishing.html">Search Engine Phishing</a></li>
+                <li><a href="smishingPhishing.html">Smishing</a></li>
+                <li><a href="spearPhishing.html">Spear Phishing</a></li>
+                <li><a href="voicePhishing.html">Voice Phishing</a></li>
+              </ul> 
+          </div>
+          <div class="main_content">
+            <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
+            <section class="scam-introduction-section">
+                <h1>Search Engine Phishing</h1>
+                <p>A search engine phishing attack involves an attacker creating fake products that appear appealing in search engine results. When users click on these listings, 
+                  they are prompted to enter sensitive information before completing a purchase, which is then captured by the hacker.
                 </p>
-            </div>
-            <div class="image-container">
-                <!-- Image Reference: https://www.keepersecurity.com/blog/2023/04/12/what-is-search-engine-phishing/ -->
-                <img src="./assets/searchEnginePhishing.jpg" alt="Real-life example illustration" />
-            </div>
-        </section>
+            </section>
 
-        <section class="scam-prevent-section">
-            <h2>How to Prevent</h2>
-            <div class="list-container">
-                <ol class="gradient-list">
-                  <li>Before clicking on a search result, carefully examine the website address to ensure it looks correct and does not contain unusual spellings.</li>
-                  <li>Stick to well-known search engines like Google or Bing, as they are more effective at blocking fake websites.</li>
-                  <li>Verify that the website address begins with “https” and displays a padlock symbol before entering any personal information.</li>
-                  <li>Utilize browser tools or extensions that can alert you to unsafe websites.</li>
-                </ol>
-            </div>
-        </section>
+            <section class="scam-real-life-examples-section">
+                <div class="content">
+                    <h2>Real-Life Examples</h2>
+                    <p>
+                      When you search for a popular website, like Amazon.com, on a search engine and click on one of the top results, you may find yourself redirected to a convincing but fraudulent site, such as Am@zon.com. This fake version is designed to closely mimic the original site, tricking users into entering sensitive information or making unauthorized purchases.
+                    </p>
+                </div>
+                <div class="image-container">
+                    <!-- Image Reference: https://www.keepersecurity.com/blog/2023/04/12/what-is-search-engine-phishing/ -->
+                    <img src="./assets/searchEnginePhishing.jpg" alt="Real-life example illustration" />
+                </div>
+            </section>
 
-        <section class="how-to-prevent-section">
-          <h2>Recovery Steps</h2>
-          <br>
-          <p>If you suspect you’ve fallen victim to a search engine phishing attack, immediately disconnect your device from the internet and close the fraudulent website without entering any personal information. Run a full scan with reputable antivirus software to detect and remove any malware that may have been installed. Change the passwords for any accounts you accessed and monitor your financial statements for unauthorized transactions. Educate yourself on recognizing phishing attempts to prevent future incidents, and consider enrolling in identity theft protection services if personal information was compromised. Finally, report the phishing attack to relevant authorities, such as the Federal Trade Commission (FTC) or local law enforcement.</p>
-        </section>
+            <section class="scam-prevent-section">
+                <h2>How to Prevent</h2>
+                <div class="list-container">
+                    <ol class="gradient-list">
+                      <li>Before clicking on a search result, carefully examine the website address to ensure it looks correct and does not contain unusual spellings.</li>
+                      <li>Stick to well-known search engines like Google or Bing, as they are more effective at blocking fake websites.</li>
+                      <li>Verify that the website address begins with “https” and displays a padlock symbol before entering any personal information.</li>
+                      <li>Utilize browser tools or extensions that can alert you to unsafe websites.</li>
+                    </ol>
+                </div>
+            </section>
+
+            <section class="how-to-prevent-section">
+              <h2>Recovery Steps</h2>
+              <br>
+              <p>If you suspect you’ve fallen victim to a search engine phishing attack, immediately disconnect your device from the internet and close the fraudulent website without entering any personal information. Run a full scan with reputable antivirus software to detect and remove any malware that may have been installed. Change the passwords for any accounts you accessed and monitor your financial statements for unauthorized transactions. Educate yourself on recognizing phishing attempts to prevent future incidents, and consider enrolling in identity theft protection services if personal information was compromised. Finally, report the phishing attack to relevant authorities, such as the Federal Trade Commission (FTC) or local law enforcement.</p>
+            </section>
+          </div>
+        </div>
 
         <!-- Add a navigation button to the next scam page -->
          <!--
@@ -146,8 +150,15 @@
         </footer>
 
         <script>
-          document.getElementById('searchEnginePhishingNextBtn').addEventListener('click', function() {
-            window.location.href = 'smishingPhishing.html';
+          const sidebarLinks = document.querySelectorAll('.sidebar ul li a');
+
+          sidebarLinks.forEach(link => {
+              link.classList.remove('active');
+
+              const hrefValue = link.getAttribute('href');
+              if (hrefValue.includes('search')) {
+                  link.classList.add('active');
+              }
           });
         </script>
 
