--- a/frontend/smishingPhishing.html
+++ b/frontend/smishingPhishing.html
@@ -62,61 +62,65 @@
                   <li class="nav-item">
                     <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
-                  <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Discover
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-                      <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                    </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
               </div>
             </div>
         </nav>
 
-        <!-- Reference: all the text contents come from https://www.kaspersky.com/resource-center/threats/what-is-smishing-and-how-to-defend-against-it -->
-        <section class="scam-introduction-section">
-            <h1>Smishing (SMS Phishing)</h1>
-            <p>Smishing is a type of scam that occurs through text messages on your phone, where scammers attempt to trick you into revealing personal information such as passwords or bank details. They may employ fake websites or malicious apps to facilitate their schemes. This can occur through regular text messages or various messaging apps. Typically, the scammers will try to entice you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.</p>
-            </p>
-        </section>
-
-        <section class="scam-real-life-examples-section">
-            <div class="content">
-                <h2>Real-Life Examples</h2>
-                <p>
-                  A common smishing attack often involves using well-known brand names along with deceptive links that claim to direct users to the brand's website. Typically, the attacker informs the recipient that they have won money or provides a malicious link for tracking packages, aiming to trick them into clicking the link and potentially revealing sensitive information or downloading malware.
+        <div class="wrapper">
+          <div class="sidebar">
+              <ul>
+                <li><a href="businessEmailCompromisePhishing.html" class="active">Business Email Compromise Phishing</a></li>
+                <li><a href="clonePhishing.html">Clone Phishing</a></li>
+                <li><a href="popupPhishing.html">Pop-up Phishing</a></li>
+                <li><a href="searchEnginePhishing.html">Search Engine Phishing</a></li>
+                <li><a href="smishingPhishing.html">Smishing</a></li>
+                <li><a href="spearPhishing.html">Spear Phishing</a></li>
+                <li><a href="voicePhishing.html">Voice Phishing</a></li>
+              </ul> 
+          </div>
+          <div class="main_content">
+            <!-- Reference: all the text contents come from https://www.kaspersky.com/resource-center/threats/what-is-smishing-and-how-to-defend-against-it -->
+            <section class="scam-introduction-section">
+                <h1>Smishing (SMS Phishing)</h1>
+                <p>Smishing is a type of scam that occurs through text messages on your phone, where scammers attempt to trick you into revealing personal information such as passwords or bank details. They may employ fake websites or malicious apps to facilitate their schemes. This can occur through regular text messages or various messaging apps. Typically, the scammers will try to entice you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.</p>
                 </p>
-            </div>
-            <div class="image-container">
-                <img class="smishing-example" src="./assets/smishing.jpg" alt="Real-life example illustration" />
-            </div>
-        </section>
+            </section>
 
-        <section class="scam-prevent-section">
-            <h2>How to Prevent</h2>
-            <div class="list-container">
-                <ol class="gradient-list">
-                  <li>Even replying with “STOP” can indicate to scammers that your number is active; it’s best to ignore the message entirely.</li>
-                  <li>If a message seems urgent, exercise caution, as it could be a scam. Take your time before taking any action.</li>
-                  <li>If you're uncertain about a message, contact your bank or company directly using official contact information, as they do not request personal details via text.</li>
-                  <li>Avoid using any links or phone numbers provided in suspicious texts; instead, visit the company’s official website or use their official contact line.</li>
-                </ol>
-            </div>
-        </section>
+            <section class="scam-real-life-examples-section">
+                <div class="content">
+                    <h2>Real-Life Examples</h2>
+                    <p>
+                      A common smishing attack often involves using well-known brand names along with deceptive links that claim to direct users to the brand's website. Typically, the attacker informs the recipient that they have won money or provides a malicious link for tracking packages, aiming to trick them into clicking the link and potentially revealing sensitive information or downloading malware.
+                    </p>
+                </div>
+                <div class="image-container">
+                    <img class="smishing-example" src="./assets/smishing.jpg" alt="Real-life example illustration" />
+                </div>
+            </section>
 
-        <section class="how-to-prevent-section">
-          <h2>Recovery Steps</h2>
-          <br>
-          <p>If you suspect you've fallen victim to a smishing attack, first ignore any suspicious text messages and do not reply, even with "STOP," as this may confirm your number is active. If you clicked a link or provided any personal information, contact your bank or service provider immediately using official contact information to secure your accounts. Run a malware scan on your device using reputable antivirus software to detect any potential threats. Monitor your financial statements for unauthorized transactions and consider changing passwords for any accounts that may have been compromised. Finally, educate yourself about smishing tactics to better recognize and avoid future scams.If you suspect you've fallen victim to a smishing attack, first ignore any suspicious text messages and do not reply, even with "STOP," as this may confirm your number is active. If you clicked a link or provided any personal information, contact your bank or service provider immediately using official contact information to secure your accounts. Run a malware scan on your device using reputable antivirus software to detect any potential threats. Monitor your financial statements for unauthorized transactions and consider changing passwords for any accounts that may have been compromised. Finally, educate yourself about smishing tactics to better recognize and avoid future scams.</p>
-        </section>
+            <section class="scam-prevent-section">
+                <h2>How to Prevent</h2>
+                <div class="list-container">
+                    <ol class="gradient-list">
+                      <li>Even replying with “STOP” can indicate to scammers that your number is active; it’s best to ignore the message entirely.</li>
+                      <li>If a message seems urgent, exercise caution, as it could be a scam. Take your time before taking any action.</li>
+                      <li>If you're uncertain about a message, contact your bank or company directly using official contact information, as they do not request personal details via text.</li>
+                      <li>Avoid using any links or phone numbers provided in suspicious texts; instead, visit the company’s official website or use their official contact line.</li>
+                    </ol>
+                </div>
+            </section>
+
+            <section class="how-to-prevent-section">
+              <h2>Recovery Steps</h2>
+              <br>
+              <p>If you suspect you've fallen victim to a smishing attack, first ignore any suspicious text messages and do not reply, even with "STOP," as this may confirm your number is active. If you clicked a link or provided any personal information, contact your bank or service provider immediately using official contact information to secure your accounts. Run a malware scan on your device using reputable antivirus software to detect any potential threats. Monitor your financial statements for unauthorized transactions and consider changing passwords for any accounts that may have been compromised. Finally, educate yourself about smishing tactics to better recognize and avoid future scams.If you suspect you've fallen victim to a smishing attack, first ignore any suspicious text messages and do not reply, even with "STOP," as this may confirm your number is active. If you clicked a link or provided any personal information, contact your bank or service provider immediately using official contact information to secure your accounts. Run a malware scan on your device using reputable antivirus software to detect any potential threats. Monitor your financial statements for unauthorized transactions and consider changing passwords for any accounts that may have been compromised. Finally, educate yourself about smishing tactics to better recognize and avoid future scams.</p>
+            </section>
+          </div>
+        </div>
 
         <!-- Add a navigation button to the next scam page -->
         <!--
@@ -144,11 +148,17 @@
         </footer>
 
         <script>
-          document.getElementById('smishingPhishingNextBtn').addEventListener('click', function() {
-            window.location.href = 'spearPhishing.html';
+          const sidebarLinks = document.querySelectorAll('.sidebar ul li a');
+
+          sidebarLinks.forEach(link => {
+              link.classList.remove('active');
+
+              const hrefValue = link.getAttribute('href');
+              if (hrefValue.includes('smishing')) {
+                  link.classList.add('active');
+              }
           });
         </script>
-
     </body>
 
 </html>
