--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -62,61 +62,65 @@
                   <li class="nav-item">
                     <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
-                  <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Discover
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-                      <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                    </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
               </div>
             </div>
         </nav>
 
-        <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
-        <section class="scam-introduction-section">
-            <h1>Voice Phishing</h1>
-            <p>Scammers often impersonate trusted entities, such as your bank, the IRS, or a delivery service, using toll-free numbers or technology that makes their calls appear legitimate. Their goal is to deceive you into providing personal information, including passwords, credit card numbers, or bank details, which they can then exploit to steal your money or identity. Typically, they may attempt to trick you into clicking on malicious links, downloading malware, or revealing sensitive information.</p>
-        </section>
+        <div class="wrapper">
+          <div class="sidebar">
+              <ul>
+                <li><a href="businessEmailCompromisePhishing.html" class="active">Business Email Compromise Phishing</a></li>
+                <li><a href="clonePhishing.html">Clone Phishing</a></li>
+                <li><a href="popupPhishing.html">Pop-up Phishing</a></li>
+                <li><a href="searchEnginePhishing.html">Search Engine Phishing</a></li>
+                <li><a href="smishingPhishing.html">Smishing</a></li>
+                <li><a href="spearPhishing.html">Spear Phishing</a></li>
+                <li><a href="voicePhishing.html">Voice Phishing</a></li>
+              </ul> 
+          </div>
+          <div class="main_content">
+            <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
+            <section class="scam-introduction-section">
+                <h1>Voice Phishing</h1>
+                <p>Scammers often impersonate trusted entities, such as your bank, the IRS, or a delivery service, using toll-free numbers or technology that makes their calls appear legitimate. Their goal is to deceive you into providing personal information, including passwords, credit card numbers, or bank details, which they can then exploit to steal your money or identity. Typically, they may attempt to trick you into clicking on malicious links, downloading malware, or revealing sensitive information.</p>
+            </section>
 
-        <section class="scam-real-life-examples-section">
-            <div class="content">
-                <h2>Real-Life Examples</h2>
-                <p>
-                  A prevalent smishing attack often involves using well-known brand names along with deceptive links that claim to lead to the brand's official website. In these attacks, the scammer typically informs the recipient that they have won money or provides a malicious link for tracking packages. This tactic aims to trick users into clicking the link, potentially leading to the theft of personal information or the download of malware.
-                </p>
-            </div>
-            <div class="image-container">
-                <!-- Image Reference: https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
-                <img src="./assets/vishing.png" alt="Real-life example illustration" />
-            </div>
-        </section>
+            <section class="scam-real-life-examples-section">
+                <div class="content">
+                    <h2>Real-Life Examples</h2>
+                    <p>
+                      A prevalent smishing attack often involves using well-known brand names along with deceptive links that claim to lead to the brand's official website. In these attacks, the scammer typically informs the recipient that they have won money or provides a malicious link for tracking packages. This tactic aims to trick users into clicking the link, potentially leading to the theft of personal information or the download of malware.
+                    </p>
+                </div>
+                <div class="image-container">
+                    <!-- Image Reference: https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
+                    <img src="./assets/vishing.png" alt="Real-life example illustration" />
+                </div>
+            </section>
 
-        <section class="scam-prevent-section">
-            <h2>How to Prevent</h2>
-            <div class="list-container">
-                <ol class="gradient-list">
-                    <li>If you realize a call isn’t from a real person, it’s perfectly acceptable to hang up; robots don’t have feelings.</li>
-                    <li>Avoid responding to voice prompts; don’t press buttons or say “yes” to speak to an operator.</li>
-                    <li>Verify the caller’s identity by asking for their name and then calling back using the official number from the company's website—never use a number they provide.</li>
-                    <li>Never share sensitive information over the phone, as legitimate government agencies, banks, or credit card companies will never ask for personal details in this manner.</li>
-                </ol>
-            </div>
-        </section>
+            <section class="scam-prevent-section">
+                <h2>How to Prevent</h2>
+                <div class="list-container">
+                    <ol class="gradient-list">
+                        <li>If you realize a call isn’t from a real person, it’s perfectly acceptable to hang up; robots don’t have feelings.</li>
+                        <li>Avoid responding to voice prompts; don’t press buttons or say “yes” to speak to an operator.</li>
+                        <li>Verify the caller’s identity by asking for their name and then calling back using the official number from the company's website—never use a number they provide.</li>
+                        <li>Never share sensitive information over the phone, as legitimate government agencies, banks, or credit card companies will never ask for personal details in this manner.</li>
+                    </ol>
+                </div>
+            </section>
 
-        <section class="how-to-prevent-section">
-          <h2>Recovery Steps</h2>
-          <br>
-          <p>If you suspect you’ve been targeted by a fraudulent call, hang up immediately and do not engage further. Review your bank and credit card statements for any unauthorized transactions and report them to your financial institution right away. Change passwords for any accounts that may have been compromised, and enable two-factor authentication for added security. If you provided personal information during the call, consider placing a fraud alert on your credit report and monitoring your accounts closely for unusual activity. Educate yourself on common scam tactics to better recognize and avoid similar threats in the future.</p>
-        </section>
+            <section class="how-to-prevent-section">
+              <h2>Recovery Steps</h2>
+              <br>
+              <p>If you suspect you’ve been targeted by a fraudulent call, hang up immediately and do not engage further. Review your bank and credit card statements for any unauthorized transactions and report them to your financial institution right away. Change passwords for any accounts that may have been compromised, and enable two-factor authentication for added security. If you provided personal information during the call, consider placing a fraud alert on your credit report and monitoring your accounts closely for unusual activity. Educate yourself on common scam tactics to better recognize and avoid similar threats in the future.</p>
+            </section>
+          </div>
+        </div>
 
         <!-- Footer -->
         <footer class="footer bg-light text-center">
@@ -136,6 +140,18 @@
           </div>
         </footer>
 
+        <script>
+          const sidebarLinks = document.querySelectorAll('.sidebar ul li a');
+
+          sidebarLinks.forEach(link => {
+              link.classList.remove('active');
+
+              const hrefValue = link.getAttribute('href');
+              if (hrefValue.includes('voice')) {
+                  link.classList.add('active');
+              }
+          });
+        </script>
     </body>
 
 </html>
