--- a/frontend/Quiz/quiz.html
+++ b/frontend/Quiz/quiz.html
@@ -38,19 +38,8 @@
                         <a class="nav-link" href="#"
                           >Test Your Knowledge <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Discover
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                            <a class="dropdown-item" href="../clonePhishing.html">Clone Phishing</a>
-                            <a class="dropdown-item" href="../popupPhishing.html">Pop-up Phishing</a>
-                            <a class="dropdown-item" href="../searchEnginePhishing.html">Search Engine Phishing</a>
-                            <a class="dropdown-item" href="../smishingPhishing.html">Smishing</a>
-                            <a class="dropdown-item" href="../spearPhishing.html">Spear Phishing</a>
-                            <a class="dropdown-item" href="../voicePhishing.html">Voice Phishing</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../businessEmailCompromisePhishing.html">Scam Overview</a>
                     </li>
                 </ul>
             </div>
