--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,19 +56,8 @@
           <li class="nav-item">
             <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Discover
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-              <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-              <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-              <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-              <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-              <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-              <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
           </li>
         </ul>
       </div>
@@ -165,7 +154,7 @@
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>Types of Phishing Scams</h3>
+						<h3>Scam Overview</h3>
 					</div>
         </div>
         <a href="businessEmailCompromisePhishing.html"> Learn More </a>
