--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -26,17 +26,8 @@
           <li class="nav-item"><a class="nav-link" href="../../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
           <li class="nav-item"><a class="nav-link active" href="#">Report Phishing Scam</a></li>
           <li class="nav-item"><a class="nav-link" href="../../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Discover</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="../../frontend/businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-              <a class="dropdown-item" href="../../frontend/clonePhishing.html">Clone Phishing</a>
-              <a class="dropdown-item" href="../../frontend/popupPhishing.html">Pop-up Phishing</a>
-              <a class="dropdown-item" href="../../frontend/searchEnginePhishing.html">Search Engine Phishing</a>
-              <a class="dropdown-item" href="../../frontend/smishingPhishing.html">Smishing</a>
-              <a class="dropdown-item" href="../../frontend/spearPhishing.html">Spear Phishing</a>
-              <a class="dropdown-item" href="../../frontend/voicePhishing.html">Voice Phishing</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="../../frontend/businessEmailCompromisePhishing.html">Scam Overview</a>
           </li>
         </ul>
       </div>
