--- a/frontend/spearPhishing.html
+++ b/frontend/spearPhishing.html
@@ -62,61 +62,65 @@
                   <li class="nav-item">
                     <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
-                  <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Discover
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-                      <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                    </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
               </div>
             </div>
         </nav>
 
-        <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
-        <section class="scam-introduction-section">
-            <h1>Spear Phishing</h1>
-            <p>Spear phishing is a targeted scam message crafted specifically for you. In this type of attack, a scammer impersonates someone you know, such as a bank employee or a friend, sending an email or text that appears very authentic. The message might say something like, "There's a problem with your account" or "Click here to update your information." Because the scammer has some personal details about you, the message seems credible and trustworthy, as if it came from someone familiar. However, the true intent is to trick you into clicking a malicious link or providing sensitive information, such as your password or bank card number. This type of scam is particularly dangerous because it is tailored to you, making it much harder to recognize than a generic phishing attempt.</p>
-        </section>
+        <div class="wrapper">
+          <div class="sidebar">
+              <ul>
+                <li><a href="businessEmailCompromisePhishing.html" class="active">Business Email Compromise Phishing</a></li>
+                <li><a href="clonePhishing.html">Clone Phishing</a></li>
+                <li><a href="popupPhishing.html">Pop-up Phishing</a></li>
+                <li><a href="searchEnginePhishing.html">Search Engine Phishing</a></li>
+                <li><a href="smishingPhishing.html">Smishing</a></li>
+                <li><a href="spearPhishing.html">Spear Phishing</a></li>
+                <li><a href="voicePhishing.html">Voice Phishing</a></li>
+              </ul> 
+          </div>
+          <div class="main_content">
+            <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
+            <section class="scam-introduction-section">
+                <h1>Spear Phishing</h1>
+                <p>Spear phishing is a targeted scam message crafted specifically for you. In this type of attack, a scammer impersonates someone you know, such as a bank employee or a friend, sending an email or text that appears very authentic. The message might say something like, "There's a problem with your account" or "Click here to update your information." Because the scammer has some personal details about you, the message seems credible and trustworthy, as if it came from someone familiar. However, the true intent is to trick you into clicking a malicious link or providing sensitive information, such as your password or bank card number. This type of scam is particularly dangerous because it is tailored to you, making it much harder to recognize than a generic phishing attempt.</p>
+            </section>
 
-        <section class="scam-real-life-examples-section">
-            <div class="content">
-                <h2>Real-Life Examples</h2>
-                <p>
-                  Between 2013 and 2015, Evaldas Rimasauskas impersonated Quanta Computer, a Taiwanese hardware supplier that provided services to tech giants Google and Facebook. He sent fake invoices totaling $122 million—$99 million to Google and $23 million to Facebook—over nearly three years before being arrested. Rimasauskas was subsequently sentenced to 30 years in prison for his fraudulent activities.
-                </p>
-            </div>
-            <div class="image-container">
-                <!-- Image Reference: https://www.tessian.com/blog/5-real-world-examples-of-phishing-attacks/ -->
-                <img src="./assets/spearPhishing.jpg" alt="Real-life example illustration" />
-            </div>
-        </section>
+            <section class="scam-real-life-examples-section">
+                <div class="content">
+                    <h2>Real-Life Examples</h2>
+                    <p>
+                      Between 2013 and 2015, Evaldas Rimasauskas impersonated Quanta Computer, a Taiwanese hardware supplier that provided services to tech giants Google and Facebook. He sent fake invoices totaling $122 million—$99 million to Google and $23 million to Facebook—over nearly three years before being arrested. Rimasauskas was subsequently sentenced to 30 years in prison for his fraudulent activities.
+                    </p>
+                </div>
+                <div class="image-container">
+                    <!-- Image Reference: https://www.tessian.com/blog/5-real-world-examples-of-phishing-attacks/ -->
+                    <img src="./assets/spearPhishing.jpg" alt="Real-life example illustration" />
+                </div>
+            </section>
 
-        <section class="scam-prevent-section">
-            <h2>How to Prevent</h2>
-            <div class="list-container">
-                <ol class="gradient-list">
-                  <li>If someone suddenly requests personal information, verify their identity by calling or contacting them through a different method.</li>
-                  <li>Carefully examine the sender's email address to ensure it’s genuinely from someone you know, as scammers often use addresses that closely resemble legitimate ones.</li>
-                  <li>Before clicking on any link in an email, hover your mouse over it to check if it directs to a trusted website.</li>
-                  <li>Enable two-factor authentication for your accounts; this adds an extra layer of security, making it difficult for unauthorized users to log in even if they have your password.</li>
-                </ol>
-            </div>
-        </section>
+            <section class="scam-prevent-section">
+                <h2>How to Prevent</h2>
+                <div class="list-container">
+                    <ol class="gradient-list">
+                      <li>If someone suddenly requests personal information, verify their identity by calling or contacting them through a different method.</li>
+                      <li>Carefully examine the sender's email address to ensure it’s genuinely from someone you know, as scammers often use addresses that closely resemble legitimate ones.</li>
+                      <li>Before clicking on any link in an email, hover your mouse over it to check if it directs to a trusted website.</li>
+                      <li>Enable two-factor authentication for your accounts; this adds an extra layer of security, making it difficult for unauthorized users to log in even if they have your password.</li>
+                    </ol>
+                </div>
+            </section>
 
-        <section class="how-to-prevent-section">
-          <h2>Recovery Steps</h2>
-          <br>
-          <p>If you suspect you've fallen victim to a spear phishing attack, immediately disconnect from the internet and avoid interacting with any suspicious emails or links. Change your passwords for any accounts that may have been compromised, and enable two-factor authentication to enhance security. Run a thorough scan with reputable antivirus software to detect any malware that might have been installed. Monitor your financial statements and accounts for unauthorized transactions and report any suspicious activity to your bank or service provider. Finally, educate yourself about phishing tactics to better recognize and avoid similar threats in the future.</p>
-        </section>
+            <section class="how-to-prevent-section">
+              <h2>Recovery Steps</h2>
+              <br>
+              <p>If you suspect you've fallen victim to a spear phishing attack, immediately disconnect from the internet and avoid interacting with any suspicious emails or links. Change your passwords for any accounts that may have been compromised, and enable two-factor authentication to enhance security. Run a thorough scan with reputable antivirus software to detect any malware that might have been installed. Monitor your financial statements and accounts for unauthorized transactions and report any suspicious activity to your bank or service provider. Finally, educate yourself about phishing tactics to better recognize and avoid similar threats in the future.</p>
+            </section>
+          </div>
+        </div>
 
         <!-- Add a navigation button to the next scam page -->
          <!--
@@ -144,11 +148,17 @@
         </footer>
 
         <script>
-          document.getElementById('spearPhishingNextBtn').addEventListener('click', function() {
-            window.location.href = 'voicePhishing.html';
+          const sidebarLinks = document.querySelectorAll('.sidebar ul li a');
+
+          sidebarLinks.forEach(link => {
+              link.classList.remove('active');
+
+              const hrefValue = link.getAttribute('href');
+              if (hrefValue.includes('spear')) {
+                  link.classList.add('active');
+              }
           });
         </script>
-
     </body>
 
 </html>
